--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Lokyshin.GitHub.io</h1>
-      <h2 class="project-tagline">沉心写作。</h2>
+      <h1 class="project-name">有用的链接🔗</h1>
+      <h2 class="project-tagline">点滴生活</h2>
     </section>
 
     <section class="main-content">
