--- a/index.html
+++ b/index.html
@@ -19,20 +19,27 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>一些有用的链接🔗</h3>
 
-<p><code>影视资源</code></br> 
+<p><code>影视资源📹</code></br> 
   <a href="https://ddrk.me/">
-    <font size="3">
-      低端影视
-    </font>
+    低端影视🎬
   </a></br>
   <a href="https://www.nfmovies.com/">
-    <font size="3">
-      奈菲影视
-    </font>
+    奈菲影视🎬
   </a></br>
 </p>
 
 
+<p><code>工具合辑🔧</code></br> 
+  <a href="https://mail.qq.com/">
+    QQ邮箱📮
+  </a></br>
+  <a href="https://mail.google.com/">
+    谷歌邮箱📮
+  </a></br>
+  <a href="file.lokyshin.com">
+    我的资料📁
+  </a></br>
+</p>
       <footer class="site-footer">
 
         <span class="site-footer-credits">Lokyshin.com 2020</span>
