--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <a href="https://mail.google.com/">
     谷歌邮箱📮
   </a></br>
-  <a href="file.lokyshin.com">
+  <a href="http://file.lokyshin.com">
     我的资料📁
   </a></br>
 </p>
