--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>一些有用的链接🔗</h3>
 
-<p><code>📹影视资源</code></br></br>
+<p><code>📹影视资源</code></br>
   <a href="https://ddrk.me/">
     🎬低端影视
   </a></br>
@@ -29,7 +29,7 @@
 </p>
 
 
-<p><code>🔧工具合辑</code></br></br> 
+<p><code>🔧工具合辑</code></br>
   <a href="https://mail.qq.com/">
     📮QQ邮箱
   </a></br>
