--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>一些有用的链接🔗</h3>
+        一些有用的链接🔗
+      </h3>
 
 <p><code>📹影视资源</code></br>
   <a href="https://ddrk.me/">
