--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">点滴生活，处处精彩</h1>
-      <h2 class="project-tagline">Powered by Lokyshin</h2>
+      <h1>
+        点滴生活，处处精彩
+      </h1>
+      <h2>
+        Powered by Lokyshin
+      </h2>
     </section>
 
     <section class="main-content">
