--- a/index.html
+++ b/index.html
@@ -20,30 +20,14 @@
 
     <section class="main-content">
       <h3>
-        一些有用的链接🔗
+        🤷‍♂️不知道说点什么
       </h3>
 
-<p><code>📹影视资源</code></br>
-  <a href="https://ddrk.me/">
-    🎬低端影视
-  </a></br>
-  <a href="https://www.nfmovies.com/">
-    🎬奈菲影视
-  </a></br>
+<p><code>无题</code></br>
+    希望越来越好。
+    </br>
 </p>
 
-
-<p><code>🔧工具合辑</code></br>
-  <a href="https://mail.qq.com/">
-    📮QQ邮箱
-  </a></br>
-  <a href="https://mail.google.com/">
-    📮谷歌邮箱
-  </a></br>
-  <a href="http://file.lokyshin.com">
-    📁我的资料
-  </a></br>
-</p>
       <footer class="site-footer">
 
         <span class="site-footer-credits">Lokyshin.com 2020</span>
