--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h3>
-        🤷‍♂️不知道说点什么
+        🤷‍♂️不知道写点什么
       </h3>
 
 <p><code>无题</code></br>
