--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
   希望越来越好。
 </p>
 
-<p><code>我的资料</code></br>
-    <a href="http://file.lokyshin.com">
-      传送门。
-    </a></br>
+<p><a href="http://file.lokyshin.com"><code>我的资料</code></a></br>
+    </br>
 </p>
 
       <footer class="site-footer">
