--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Lokyshin.com 2020</span>
+        <span class="site-footer-credits">Lokyshin.net 2020</span>
       </footer>
 
     </section>
