--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
 
     <section class="main-content">
       <h3>
-        🤷‍♂️不知道写点什么
+总有一些美好
+值得期待
+一分钟
+等云开雾散，日照金山
+一季秋
+等稻谷飘香，候鸟飞远
+一百年
+世事流转，从执子之手，到万家团圆
+我常在想
+人生意义何在
+徜徉山水的景致
+陪伴亲人的思念
+还是
+双手送出温暖
+带来笑语欢颜
       </h3>
 
 <p>
   希望越来越好。
 </p>
 
-<p><a href="http://file.lokyshin.com"><code>我的资料</code></a></br>
+<p><a href="http://kod.lokyshin.net"><code>我的资料</code></a></br>
     </br>
 </p>
 
