--- a/index.html
+++ b/index.html
@@ -20,31 +20,22 @@
 
     <section class="main-content">
       <h3>
-总有一些美好
-值得期待
-一分钟
-等云开雾散，日照金山
-一季秋
-等稻谷飘香，候鸟飞远
-一百年
-世事流转，从执子之手，到万家团圆
-我常在想
-人生意义何在
-徜徉山水的景致
-陪伴亲人的思念
-还是
-双手送出温暖
-带来笑语欢颜
+      总有一些美好</br>
+      值得期待</br>
+      一分钟</br>
+      等云开雾散，日照金山</br>
+      一季秋</br>
+      等稻谷飘香，候鸟飞远</br>
+      一百年</br>
+      世事流转，从执子之手，到万家团圆</br>
+      我常在想</br>
+      人生意义何在</br>
+      徜徉山水的景致</br>
+      陪伴亲人的思念</br>
+      还是</br>
+      双手送出温暖</br>
+      带来笑语欢颜</br>
       </h3>
-
-<p>
-  希望越来越好。
-</p>
-
-<p><a href="http://kod.lokyshin.net"><code>我的资料</code></a></br>
-    </br>
-</p>
-
       <footer class="site-footer">
 
         <span class="site-footer-credits">Lokyshin.net 2020</span>
