--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
       </h2>
     </section>
 
-    <section class="main-content">
+    <section class="main-content" class="center">
       <h3>
-      &#12288;&#12288;&#12288;&#12288;总有一些美好</br>
-      &#12288;&#12288;&#12288;&#12288;值得期待</br>
-      &#12288;&#12288;&#12288;&#12288;一分钟</br>
-      &#12288;&#12288;&#12288;&#12288;等云开雾散，日照金山</br>
-      &#12288;&#12288;&#12288;&#12288;一季秋</br>
-      &#12288;&#12288;&#12288;&#12288;等稻谷飘香，候鸟飞远</br>
-      &#12288;&#12288;&#12288;&#12288;一百年</br>
-      &#12288;&#12288;&#12288;&#12288;世事流转，从执子之手，到万家团圆</br>
-      &#12288;&#12288;&#12288;&#12288;我常在想</br>
-      &#12288;&#12288;&#12288;&#12288;人生意义何在</br>
-      &#12288;&#12288;&#12288;&#12288;徜徉山水的景致</br>
-      &#12288;&#12288;&#12288;&#12288;陪伴亲人的思念</br>
-      &#12288;&#12288;&#12288;&#12288;还是</br>
-      &#12288;&#12288;&#12288;&#12288;双手送出温暖</br>
-      &#12288;&#12288;&#12288;&#12288;带来笑语欢颜</br>
+      总有一些美好</br>
+      值得期待</br>
+      一分钟</br>
+      等云开雾散，日照金山</br>
+      一季秋</br>
+      等稻谷飘香，候鸟飞远</br>
+      一百年</br>
+      世事流转，从执子之手，到万家团圆</br>
+      我常在想</br>
+      人生意义何在</br>
+      徜徉山水的景致</br>
+      陪伴亲人的思念</br>
+      还是</br>
+      双手送出温暖</br>
+      带来笑语欢颜</br>
       </h3>
       <footer class="site-footer">
 
