--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </h2>
     </section>
 
-    <section class="main-content" class="center">
+    <section class="main-content">
       <h3>
       总有一些美好</br>
       值得期待</br>
