--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <hr>
         
-        <section class="service-category">
+        <section class="main-content">
                 <h3 class="category-title">服务网址</h2>
                 <ul>
                         <li>
@@ -66,7 +66,7 @@
                 </ul>
         </section>
         
-        <section class="service-category">
+        <section class="main-content">
                 <h3 class="category-title">编程与统计计算</h2>
                 <ul>
                         <li>
@@ -83,7 +83,7 @@
                         </li>
                 </ul>
         </section>
-        <section class="service-category">
+        <section class="main-content">
                 <h3 class="category-title">工具类</h2>
                 <ul>
                         <li>
