--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h3 class="category-title">工具类</h2>
                 <ul>
                         <li>
-                                <a href="https://mail.lokyshin.net">邮箱</a>
+                                <a href="https://mail.lokyshin.net">Lokyshin.net邮箱</a>
                         </li>
                         <li>
                                 <a href="https://pdf.lokyshin.net">Stirling PDF</a>
