--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
 <section class="page-header">
-<h1>
+    <p class="title">
         点滴生活，处处精彩
-      </h1>
-<h2>
+    </p>
+    <p class="subtitle">
         Powered by Lokyshin
-      </h2>
+    </p>
 </section>
 <section class="main-content">
-
+    <div class="content is-medium">
       <h3>
       总有一些美好</br>
       值得期待</br>
@@ -39,8 +39,8 @@
       双手送出温暖</br>
       带来笑语欢颜</br>
       </h3>
+    </div>
 
-        </br>
         
                <div class="columns is-multiline">
                 <!-- Service cards -->
