--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
 <section class="page-header">
-    <p class="title">
+    <h1 class="title">
         点滴生活，处处精彩
-    </p>
-    <p class="subtitle">
+    </h1>
+    <h2 class="subtitle">
         Powered by Lokyshin
-    </p>
+    </h2>
 </section>
 <section class="main-content">
-    <div class="content is-medium">
-      <h3>
+    <div class="content">
+
       总有一些美好</br>
       值得期待</br>
       一分钟</br>
@@ -38,7 +38,7 @@
       还是</br>
       双手送出温暖</br>
       带来笑语欢颜</br>
-      </h3>
+
     </div>
 
         
