--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Powered by Lokyshin
     </h2>
 </section>
-<div class="container" style="padding-top: 52px;">
+<div class="container">
   <div class="box" style="margin-top: 20px;">
     <div class="content">
 
@@ -131,7 +131,8 @@
 </div> 
                    
 <div class="content is-small has-text-centered">
-  <p><br><a href="https://lokyshin.net">Lokyshin.net</a></p>
+  <p><a href="https://lokyshin.net">Lokyshin.net</a></p>
+    <br>
 </div>  
         
 </body>
