--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
 <section class="page-header">
-    <h1 class="title white-text">
+    <h1 class="title has-text-white">
         点滴生活，处处精彩
     </h1>
-    <h2 class="subtitle white-text">
+    <h2 class="subtitle has-text-white">
         Powered by Lokyshin
     </h2>
 </section>
