--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="column is-one-third">
                             <div class="card">
                                 <header class="card-header">
-                                    <p class="card-header-title">相关服务</p>
+                                    <p class="card-header-title">我的服务</p>
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
