--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <link href="stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="stylesheets/light.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="stylesheets/style.css" media="screen" rel="stylesheet" type="text/css"/>
+<style>
+.image-background {
+  background-image: url('img/mountains.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;  /* 根据需要调整这个值 */
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.5); /* 黑色半透明 */
+  color: white; /* 设置文字为白色 */
+}
+</style>
+    
 </head>
 <body>
 <section class="page-header">
@@ -22,24 +36,24 @@
 </section>
 <div class="container">
   <div class="box" style="margin-top: 20px;">
-    <div class="content">
-
-      总有一些美好</br>
-      值得期待</br>
-      一分钟</br>
-      等云开雾散，日照金山</br>
-      一季秋</br>
-      等稻谷飘香，候鸟飞远</br>
-      一百年</br>
-      世事流转，从执子之手，到万家团圆</br>
-      我常在想</br>
-      人生意义何在</br>
-      徜徉山水的景致</br>
-      陪伴亲人的思念</br>
-      还是</br>
-      双手送出温暖</br>
-      带来笑语欢颜</br>
-
+    <div class="content image-background">
+        <div class="overlay">
+          总有一些美好</br>
+          值得期待</br>
+          一分钟</br>
+          等云开雾散，日照金山</br>
+          一季秋</br>
+          等稻谷飘香，候鸟飞远</br>
+          一百年</br>
+          世事流转，从执子之手，到万家团圆</br>
+          我常在想</br>
+          人生意义何在</br>
+          徜徉山水的景致</br>
+          陪伴亲人的思念</br>
+          还是</br>
+          双手送出温暖</br>
+          带来笑语欢颜</br>
+        </div>
     </div>
 
         
