--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   background-image: url('img/mountains.jpg');
   background-size: cover;
   background-position: center;
-  height: 100vh;  /* 根据需要调整这个值 */
 }
 
 .overlay {
-  background: rgba(0, 0, 0, 0.5); /* 黑色半透明 */
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
   color: white; /* 设置文字为白色 */
 }
 </style>
