--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 .overlay {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
-  color: white; /* 设置文字为白色 */
+  color: white; 
+  padding: 20px;
 }
 </style>
     
