--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="stylesheets/style.css" media="screen" rel="stylesheet" type="text/css"/>
 <style>
 .image-background {
-  background-image: url('img/mountains.jpg');
+  background-image: url('image/textbg.jpg');
   background-size: cover;
   background-position: center;
 }
