--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                                                         <a href="https://survcox.lokyshin.net">R语言生存分析工具</a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://jupyter.lokyshin.net">Python</a>
+                                                        <a href="https://jupyter.lokyshin.net">Jupyter Lab</a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://r.lokyshin.net">R</a>
+                                                        <a href="https://r.lokyshin.net">R Studio</a>
                                                 </li>
                                         </ul>
                                     </div>
