--- a/index.html
+++ b/index.html
@@ -69,13 +69,22 @@
                                     <div class="content">
                                         <ul>
                                                 <li>
-                                                        <a href="https://mail.lokyshin.net">Lokyshin.net邮箱</a>
+                                                        <a href="https://mail.lokyshin.net">
+                                                          <i class="fas fa-envelope"></i> 
+                                                          Lokyshin.net邮箱
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://pdf.lokyshin.net">Stirling PDF</a>
+                                                        <a href="https://pdf.lokyshin.net">
+                                                          <i class="fas fa-file-pdf"></i> 
+                                                          Stirling PDF
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net">ChatGPT</a>
+                                                        <a href="https://chat.lokyshin.net">
+                                                          <i class="fas fa-comments"></i> 
+                                                          ChatGPT
+                                                        </a>
                                                 </li>
                                         </ul>
                                     </div>
