--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="stylesheets/light.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="stylesheets/style.css" media="screen" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
 .image-background {
   background-image: url('image/textbg.jpg');
