--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
-                                        <ul>
+                                        <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://mail.lokyshin.net">
                                                           <i class="fas fa-envelope"></i> 
