--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
-                                        <ul>
+                                        <ul  style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://pysurtool.lokyshin.net">Python生存分析与统计工具</a>
+                                                        <a href="https://pysurtool.lokyshin.net">
+                                                          <i class="fa-solid fa-magnifying-glass-chart"></i> 
+                                                          Python生存分析与统计工具
+                                                        </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://survcox.lokyshin.net">R语言生存分析工具</a>
