--- a/index.html
+++ b/index.html
@@ -100,21 +100,30 @@
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
-                                        <ul  style="list-style-type: none;">
+                                        <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://pysurtool.lokyshin.net">
-                                                          <i class="fa-solid fa-magnifying-glass-chart"></i> 
+                                                          <i class="fa-duotone fa-staff-snake"></i> 
                                                           Python生存分析与统计工具
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://survcox.lokyshin.net">R语言生存分析工具</a>
+                                                        <a href="https://survcox.lokyshin.net">
+                                                          <i class="fa-duotone fa-r"></i> 
+                                                          R语言生存分析工具
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://jupyter.lokyshin.net">JupyterLab</a>
+                                                        <a href="https://jupyter.lokyshin.net">
+                                                          <i class="fa-solid fa-staff-snake"></i> 
+                                                          JupyterLab
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://r.lokyshin.net">R Studio</a>
+                                                        <a href="https://r.lokyshin.net">
+                                                          <i class="fa-solid fa-r"></i> 
+                                                          R Studio
+                                                        </a>
                                                 </li>
                                         </ul>
                                     </div>
