--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://jupyter.lokyshin.net">
-                                                          <i class="fa-solid fa-staff-snake"></i> 
+                                                          <i class="fa-solid fa-snake"></i> 
                                                           JupyterLab
                                                         </a>
                                                 </li>
