--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://survcox.lokyshin.net">
-                                                          <i class="fa-duotone fa-r"></i> 
+                                                          <i class="fa-solid fa-r"></i> 
                                                           R语言生存分析工具
                                                         </a>
                                                 </li>
@@ -121,7 +121,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://r.lokyshin.net">
-                                                          <i class="fa-solid fa-r"></i> 
+                                                          <i class="fa-solid fa-registered"></i> 
                                                           R Studio
                                                         </a>
                                                 </li>
