--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         <ul style="list-style-type: none;">
                                                 <li>
                                                         <a href="https://pysurtool.lokyshin.net">
-                                                          <i class="fa-duotone fa-staff-snake"></i> 
+                                                          <i class="fa-duotone fa-chart-simple"></i> 
                                                           Python生存分析与统计工具
                                                         </a>
                                                 </li>
@@ -115,7 +115,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://jupyter.lokyshin.net">
-                                                          <i class="fa-solid fa-snake"></i> 
+                                                          <i class="fa-brands fa-python"></i> 
                                                           JupyterLab
                                                         </a>
                                                 </li>
