--- a/index.html
+++ b/index.html
@@ -138,15 +138,24 @@
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
-                                        <ul>
+                                        <ul style="list-style-type: none;">
                                                 <li>
-                                                        <a href="https://ssh.lokyshin.net">SSH服务</a>
+                                                        <a href="https://ssh.lokyshin.net">
+                                                          <i class="fa-solid fa-terminal"></i> 
+                                                          SSH服务
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://docker.lokyshin.net">Docker服务</a>
+                                                        <a href="https://docker.lokyshin.net">
+                                                          <i class="fa-brands fa-docker"></i> 
+                                                          Docker服务
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://transfer.lokyshin.net">文件传递</a>
+                                                        <a href="https://transfer.lokyshin.net">
+                                                          <i class="fa-solid fa-download"></i> 
+                                                          文件传递
+                                                        </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://lkschatbot.lokyshin.net">微信服务</a>
