--- a/index.html
+++ b/index.html
@@ -158,13 +158,22 @@
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://lkschatbot.lokyshin.net">微信服务</a>
+                                                        <a href="https://lkschatbot.lokyshin.net">
+                                                          <i class="fa-brands fa-weixin"></i> 
+                                                          微信服务
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://find.lokyshin.net">网络接入</a>
+                                                        <a href="https://find.lokyshin.net">
+                                                          <i class="fa-solid fa-network-wired"></i> 
+                                                          网络接入
+                                                        </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://socks.lokyshin.net">Socks服务</a>
+                                                        <a href="https://socks.lokyshin.net">
+                                                          <i class="fa-solid fa-rocket"></i> 
+                                                          Socks服务
+                                                        </a>
                                                 </li>
                                         </ul>
                                     </div>
