--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://chat.lokyshin.net">
-                                                          <i class="fas fa-comments"></i> 
+                                                          <i class="fa-brands fa-rocketchat"></i> 
                                                           &nbsp;&nbsp;ChatGPT
                                                         </a>
                                                 </li>
