--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://survcox.lokyshin.net">
-                                                          <i class="fa-solid fa-r"></i> 
+                                                          <i class="fa-solid fa-chart-gantt"></i> 
                                                           &nbsp;&nbsp;R语言生存分析工具
                                                         </a>
                                                 </li>
@@ -189,8 +189,9 @@
 </div> 
                    
 <div class="content is-small has-text-centered">
+  <br>
   <p><a href="https://lokyshin.net">Lokyshin.net</a></p>
-    <br>
+  <br>
 </div>  
         
 </body>
