--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                                 <li>
                                                         <a href="https://pdf.lokyshin.net">
                                                           <i class="fas fa-file-pdf"></i> 
-                                                          &nbsp;&nbsp;Stirling PDF
+                                                          &nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
                                         </ul>
