--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                         <div class="column is-one-third">
                             <div class="card">
                                 <header class="card-header">
-                                    <p class="card-header-title">常用工具</p>
+                                    <p class="card-header-title">
+                                      <i class="fa-solid fa-screwdriver-wrench"></i> 
+                                      &nbsp;&nbsp;常用工具
+                                    </p>
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
@@ -56,15 +59,15 @@
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net">
-                                                          <i class="fa-brands fa-rocketchat"></i> 
-                                                          &nbsp;&nbsp;ChatGPT
-                                                        </a>
-                                                </li>
-                                                <li>
                                                         <a href="https://pdf.lokyshin.net">
                                                           <i class="fas fa-file-pdf"></i> 
                                                           &nbsp;&nbsp;Lokyshin's PDF
+                                                        </a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://chat.lokyshin.net">
+                                                          <i class="fa-brands fa-rocketchat"></i> 
+                                                          &nbsp;&nbsp;ChatGPT
                                                         </a>
                                                 </li>
                                         </ul>
@@ -76,7 +79,10 @@
                         <div class="column is-one-third">
                             <div class="card">
                                 <header class="card-header">
-                                    <p class="card-header-title">编程统计</p>
+                                    <p class="card-header-title">
+                                      <i class="fa-solid fa-keyboard"></i> 
+                                      &nbsp;&nbsp;编程统计
+                                    </p>
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
@@ -114,7 +120,10 @@
                         <div class="column is-one-third">
                             <div class="card">
                                 <header class="card-header">
-                                    <p class="card-header-title">我的服务</p>
+                                    <p class="card-header-title">
+                                      <i class="fa-solid fa-server"></i> 
+                                      &nbsp;&nbsp;我的服务
+                                    </p>
                                 </header>
                                 <div class="card-content">
                                     <div class="content">
